# lockheedMartinPico

./: readme.md
pico-twow/: CMakeLists.txt
pico-twow/include/: config.hpp
pico-twow/include/app/: packet_builder.hpp
pico-twow/include/hardware/: spi_demo.hpp
pico-twow/include/hw/: i2c_bus.hpp  spi_bus.hpp
pico-twow/include/net/: udp_client.hpp
pico-twow/include/network/: udp_sender.hpp
pico-twow/include/sensor/: bme_280_driver.hpp
pico-twow/scripts/: udp_listener.py
pico-twow/src/: main.cpp
pico-twow/src/app/: packet_builder.cpp
pico-twow/src/hardware/: spi_demo.cpp
pico-twow/src/hw/: linux_i2c_bus.cpp  linux_spi_bus.cpp
pico-twow/src/net/: udp_client.cpp
pico-twow/src/network/: udp_sender.cpp
pico-twow/src/sensor/: bme280_driver.cpp  bme_280_driver.cpp
pico-twow/tests/: test_bme280_driver.cpp  test_packet_builder.cpp
picoI2c/: README.md
picoI2c/docs/: wiring.md
picoI2c/include/bme280/: bme280_defs.hpp  sample.hpp
picoI2c/src/: bme280_driver.cpp  i2c_transport_pico.cpp  spi_transport_pico.cpp
picoI2c/tests/integration/: test_bme280_integration.cpp
pico_hw_demo/: .gitignore  CMakeLists.txt  Makefile
pico_hw_demo/cmake/: pico_sdk_import.cmake
pico_hw_demo/include/bme280/: bme280_driver.hpp
pico_hw_demo/include/protocols/: i2c_bus.hpp
pico_hw_demo/scripts/: serial_capture.py
pico_hw_demo/src/: main.cpp
pico_hw_demo/tests/unit/: test_bme280_driver.cpp
